[package]
name = "SerialPortEnumerator"
version = "0.1.0"
authors = ["Evgenii Karachevtsev <kebox7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wmi = "0.4.4"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
lto = "fat"
panic = "abort"
